fix moba overflow issue

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -79,23 +79,27 @@
 }
 
 .contact-form {
-	input[type=text], select, textarea {
-		width: 100%;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+
+	input[type=text], [type=email], select, textarea {
+		width: 70vw;
 		padding: 12px;
-		border: 1px solid blue;
-		border-radius: 4px;
+		border: none;
+		border-bottom: 1px solid white;
 		box-sizing: border-box;
 		margin-top: 6px;
 		margin-bottom: 16px;
 		resize: vertical;
+		background-color: #000000;
+	}:hover {
+		border: 3px solid blue;
+	}:active {
+		border: 3px solid blue;
 	}
 
-	input[type=email] {
-		background-color: #04AA6D;
-		color: white;
-		padding: 12px 20px;
-		border: none;
-		border-radius: 4px;
-		cursor: pointer;
+	button {
+	
 	}
 }
