--- a/src/app/project-preview/project-preview.component.scss
+++ b/src/app/project-preview/project-preview.component.scss
@@ -99,6 +99,8 @@
 			transform: translateX(100%);
 			@media (min-width:900px) {
 				max-width: 100%;
+				overflow-x: hidden; 
+				padding: 10px;
 			}
 			opacity: 0;
 			transition: all 0.5s ease-out;
